gh-4700 Fix issues with missing .entries on boot, add debug