@@ -8,12 +8,15 @@ import stroom.proxy.app.ProxyConfig;
 import stroom.proxy.repo.AggregatorConfig;
 import stroom.proxy.repo.FeedKey;
 import stroom.proxy.repo.ProxyServices;
+import stroom.util.NullSafe;
 import stroom.util.io.FileName;
 import stroom.util.io.FileUtil;
 import stroom.util.logging.LambdaLogger;
 import stroom.util.logging.LambdaLoggerFactory;
+import stroom.util.logging.LogUtil;
 import stroom.util.string.StringIdUtil;
 
+import com.google.common.util.concurrent.Striped;
 import jakarta.inject.Inject;
 import jakarta.inject.Provider;
 import jakarta.inject.Singleton;
@@ -24,6 +27,7 @@ import java.io.BufferedInputStream;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.io.Writer;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
@@ -35,7 +39,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.concurrent.locks.Lock;
 import java.util.function.Consumer;
 import java.util.stream.Stream;
 
@@ -44,15 +50,17 @@ public class PreAggregator {
 
     private static final LambdaLogger LOGGER = LambdaLoggerFactory.getLogger(PreAggregator.class);
 
+    // TODO How many stripes we have is open to question as we are ultimately IO bound
+    //  when adding all the parts
+    private static final int FEED_KEY_LOCK_STRIPES = 32;
+
     private final NumberedDirProvider tempSplittingDirProvider;
     private final Path stagedSplittingDir;
     private final CleanupDirQueue deleteDirQueue;
     private final AggregatorConfig aggregatorConfig;
-    private final DataDirProvider dataDirProvider;
-
     private final Path aggregatingDir;
-
     private final Map<FeedKey, AggregateState> aggregateStateMap = new ConcurrentHashMap<>();
+    private final Striped<Lock> feedKeyLock = Striped.lock(FEED_KEY_LOCK_STRIPES);
 
     private Consumer<Path> destination;
 
@@ -63,10 +71,10 @@ public class PreAggregator {
                          final ProxyServices proxyServices) {
         this.deleteDirQueue = deleteDirQueue;
         this.aggregatorConfig = proxyConfigProvider.get().getAggregatorConfig();
-        this.dataDirProvider = dataDirProvider;
 
         // Get or create the aggregating dir.
         aggregatingDir = dataDirProvider.get().resolve(DirNames.PRE_AGGREGATES);
+        LOGGER.info("Initialising PreAggregator with aggregateDir: {}", aggregatingDir);
         DirUtil.ensureDirExists(aggregatingDir);
 
         // Read all the current aggregates and establish the aggregation state.
@@ -88,21 +96,38 @@ public class PreAggregator {
 
         // Move any split data from previous proxy usage to the aggregates.
         // We will assume that data has been split appropriately for the current aggregate state.
+        final AtomicInteger movedSplitCount = new AtomicInteger();
+        final AtomicInteger delCount = new AtomicInteger();
         try (final Stream<Path> stream = Files.list(stagedSplittingDir)) {
             stream.forEach(splitGroup -> {
+                final AtomicInteger splitGroupItemCount = new AtomicInteger();
                 try (final Stream<Path> fileGroupStream = Files.list(splitGroup)) {
-                    fileGroupStream.forEach(this::addDir);
+                    fileGroupStream.forEach(dir -> {
+                        splitGroupItemCount.incrementAndGet();
+                        // No need for locking as we are a single thread as this is a singleton
+                        addDirWithoutLocking(dir);
+                        movedSplitCount.incrementAndGet();
+                    });
                 } catch (final IOException e) {
                     LOGGER.error(e::getMessage, e);
                     throw new UncheckedIOException(e);
                 }
+                if (splitGroupItemCount.get() == 0) {
+                    deleteEmptyDir(splitGroup, delCount::incrementAndGet);
+                }
             });
+            if (delCount.get() > 0) {
+                LOGGER.info("Deleted {} empty directories in {}", delCount, stagedSplittingDir);
+            }
         } catch (final IOException e) {
             LOGGER.error(e::getMessage, e);
             throw new UncheckedIOException(e);
         }
+        LOGGER.info("Found {} existing pre-aggregate splits", movedSplitCount);
 
         // Periodically close old aggregates.
+        // This need to be started at the end of the ctor, so we know that everything above can
+        // run on the assumption that it is the only thread in play
         proxyServices
                 .addFrequencyExecutor(
                         "Close Old Aggregates",
@@ -111,11 +136,12 @@ public class PreAggregator {
     }
 
     private void initialiseAggregateStateMap() {
+        LOGGER.info("Initialising the state of existing pre-aggregates");
         // Read all the current aggregates and establish the aggregation state.
         try (final Stream<Path> stream = Files.list(aggregatingDir)) {
             // Look at each aggregate dir.
             stream.forEach(aggregateDir -> {
-                final AggregateState aggregateState = new AggregateState(Instant.now(), aggregateDir);
+                final AggregateState aggregateState = new AggregateState(aggregateDir);
                 final AtomicReference<FeedKey> feedKeyRef = new AtomicReference<>();
 
                 // Now examine each file group to read state.
@@ -123,14 +149,14 @@ public class PreAggregator {
                     // Now read the entries.
                     groupStream.forEach(groupDir -> {
                         final FileGroup fileGroup = new FileGroup(groupDir);
+                        final Path entriesFile = fileGroup.getEntries();
                         aggregateState.partCount++;
-                        try (final BufferedReader bufferedReader = Files.newBufferedReader(fileGroup.getEntries())) {
+                        try (final BufferedReader bufferedReader = Files.newBufferedReader(entriesFile)) {
                             String line = bufferedReader.readLine();
                             while (line != null) {
                                 final ZipEntryGroup zipEntryGroup = ZipEntryGroup.read(line);
                                 final long totalUncompressedSize = zipEntryGroup.getTotalUncompressedSize();
-                                aggregateState.itemCount++;
-                                aggregateState.totalBytes += totalUncompressedSize;
+                                aggregateState.addItem(totalUncompressedSize);
 
                                 final FeedKey existingFeedKey = feedKeyRef.get();
                                 final FeedKey newFeedKey = new FeedKey(
@@ -156,97 +182,149 @@ public class PreAggregator {
                     throw new UncheckedIOException(e);
                 }
 
-                if (feedKeyRef.get() != null) {
-                    aggregateStateMap.put(feedKeyRef.get(), aggregateState);
-                }
+                LOGGER.debug("Initialised aggregateState {}", aggregateState);
+                NullSafe.consume(feedKeyRef.get(), feedKey ->
+                        aggregateStateMap.put(feedKey, aggregateState));
             });
         } catch (final IOException e) {
             LOGGER.error(e::getMessage, e);
             throw new UncheckedIOException(e);
         }
+        LOGGER.info(() ->
+                LogUtil.message("Completed initialisation of {} pre-aggregates", aggregateStateMap.size()));
     }
 
-    public synchronized void addDir(final Path dir) {
+    private FeedKey readFeedKeyFromMeta(final FileGroup fileGroup) throws IOException {
+        final AttributeMap attributeMap = new AttributeMap();
+        AttributeMapUtil.read(fileGroup.getMeta(), attributeMap);
+        final String feed = attributeMap.get(StandardHeaderArguments.FEED);
+        final String type = attributeMap.get(StandardHeaderArguments.TYPE);
+        return new FeedKey(feed, type);
+    }
+
+    public void addDir(final Path dir) {
+        LOGGER.trace("addDir '{}'", dir);
         try {
             final FileGroup fileGroup = new FileGroup(dir);
-            final AttributeMap attributeMap = new AttributeMap();
-            AttributeMapUtil.read(fileGroup.getMeta(), attributeMap);
+            final FeedKey feedKey = readFeedKeyFromMeta(fileGroup);
 
-            final String feed = attributeMap.get(StandardHeaderArguments.FEED);
-            final String type = attributeMap.get(StandardHeaderArguments.TYPE);
-            final FeedKey feedKey = new FeedKey(feed, type);
-
-            // TODO : We could use separate threads for each feed key.
-
-            // Calculate where we might want to split the incoming data.
-            final List<Part> parts;
-            if (aggregatorConfig.isSplitSources()) {
-                parts = calculateSplitParts(feedKey, fileGroup);
-            } else {
-                parts = calculateOverflowingParts(fileGroup);
+            // Striped lock to ensure calls with the same feedKey block each other, but
+            // other feedKeys may not be blocked (depending on stripe count)
+            final Lock lock = feedKeyLock.get(feedKey);
+            lock.lock();
+            try {
+                addDir(dir, fileGroup, feedKey);
+            } finally {
+                lock.unlock();
             }
-
-            // If there is only one part then just add directly to the aggregate.
-            if (parts.size() == 1) {
-                // Just add the single part to the current aggregate.
-                addPartToAggregate(feedKey, dir, parts.get(0));
-
-            } else {
-                // Split the data.
-                final PartDirs partDirSet = split(dir, parts);
-                final List<PartDir> partDirs = partDirSet.children();
-
-                // Assert that we have created matching splits.
-                if (parts.size() != partDirs.size()) {
-                    throw new RuntimeException("Unexpected split dir count");
-                }
-
-                // Prepare destination for staged split data.
-                final Path splitStaging = stagedSplittingDir.resolve(partDirSet.parent.getFileName());
-
-                // Atomically move the temporary split data into the split staging area.
-                Files.move(partDirSet.parent, splitStaging, StandardCopyOption.ATOMIC_MOVE);
-
-                // NOTE : If we get failure here before we delete the source then we will end up duplicating data, but
-                // we can't do much about that.
-
-                // Delete source file set as we have split and duplicated.
-                deleteDirQueue.add(dir);
-
-                // Create complete aggregates from all parts except the last one.
-                for (int i = 0; i < partDirs.size() - 1; i++) {
-                    final PartDir partDir = partDirs.get(i);
-                    final Path splitDir = splitStaging.resolve(partDir.dir.getFileName());
-                    final AggregateState aggregateState = addPartToAggregate(feedKey, splitDir, partDir.part);
-
-                    // Close the aggregate.
-                    closeAggregate(feedKey, aggregateState);
-                }
-
-                // Add final part as new aggregate.
-                final PartDir partDir = partDirs.get(partDirs.size() - 1);
-                final Path splitDir = splitStaging.resolve(partDir.dir.getFileName());
-                addPartToAggregate(feedKey, splitDir, partDir.part);
-            }
-
-            // If we have an aggregate we can close now then do so.
-            final AggregateState aggregateState = aggregateStateMap
-                    .computeIfAbsent(feedKey, this::createAggregate);
-            final long maxItemsPerAggregate = aggregatorConfig.getMaxItemsPerAggregate();
-            final long maxUncompressedByteSize = aggregatorConfig.getMaxUncompressedByteSize();
-            if (aggregateState.itemCount >= maxItemsPerAggregate ||
-                    aggregateState.totalBytes >= maxUncompressedByteSize) {
-                closeAggregate(feedKey, aggregateState);
-            }
-
         } catch (final IOException e) {
             LOGGER.error(e::getMessage, e);
         }
     }
 
+    private void addDirWithoutLocking(final Path dir) {
+        LOGGER.trace("addDirFromSplit '{}'", dir);
+        try {
+            // This is only called by the singleton ctor so no feedKey locking needed
+            final FileGroup fileGroup = new FileGroup(dir);
+            final FeedKey feedKey = readFeedKeyFromMeta(fileGroup);
+            addDir(dir, fileGroup, feedKey);
+        } catch (final IOException e) {
+            LOGGER.error(e::getMessage, e);
+        }
+    }
+
+    private void addDir(final Path dir, final FileGroup fileGroup, final FeedKey feedKey)
+            throws IOException {
+
+        LOGGER.trace("addDir() - dir: '{}', feedKey: {}", dir, feedKey);
+
+        // Calculate where we might want to split the incoming data.
+        final List<Part> parts;
+        if (aggregatorConfig.isSplitSources()) {
+            parts = calculateSplitParts(feedKey, fileGroup);
+        } else {
+            parts = calculateOverflowingParts(fileGroup);
+        }
+
+        // If there is only one part then just add directly to the aggregate.
+        if (parts.size() == 1) {
+            // Just add the single part to the current aggregate.
+            LOGGER.trace("Single part, dir: {}", dir);
+            addPartToAggregate(feedKey, dir, parts.get(0));
+        } else {
+            LOGGER.trace(() -> LogUtil.message("Multiple parts, dir: {}, count: {}", dir, parts.size()));
+            // Split the data.
+            final PartDirs partDirSet = split(dir, parts);
+            final List<PartDir> partDirs = partDirSet.children();
+
+            // Assert that we have created matching splits.
+            if (parts.size() != partDirs.size()) {
+                throw new RuntimeException("Unexpected split dir count");
+            }
+
+            // Prepare destination for staged split data.
+            final Path splitStaging = stagedSplittingDir.resolve(partDirSet.parent.getFileName());
+
+            // Atomically move the temporary split data into the split staging area.
+            final Path source = partDirSet.parent;
+            LOGGER.trace("Moving {} => {}", source, splitStaging);
+            Files.move(source, splitStaging, StandardCopyOption.ATOMIC_MOVE);
+
+            // NOTE : If we get failure here before we delete the source then we will end up duplicating data, but
+            // we can't do much about that.
+
+            // Delete source file set as we have split and duplicated.
+            LOGGER.debug("Sending {} to deleteDirQueue", dir);
+            deleteDirQueue.add(dir);
+
+            // Create complete aggregates from all parts except the last one.
+            for (int i = 0; i < partDirs.size() - 1; i++) {
+                final PartDir partDir = partDirs.get(i);
+                final Path splitDir = splitStaging.resolve(partDir.dir.getFileName());
+                final AggregateState aggregateState = addPartToAggregate(feedKey, splitDir, partDir.part);
+                LOGGER.trace("Split idx: {}, partDir: {}, splitDir: {}, aggregateState: {}",
+                        i, partDir, splitDir, aggregateState);
+
+                // Close the aggregate.
+                closeAggregate(feedKey, aggregateState);
+            }
+
+            // Add final part as new aggregate.
+            final PartDir partDir = partDirs.get(partDirs.size() - 1);
+            final Path splitDir = splitStaging.resolve(partDir.dir.getFileName());
+            final AggregateState aggregateState = addPartToAggregate(feedKey, splitDir, partDir.part);
+            LOGGER.trace("Final split, partDir: {}, splitDir: {}, aggregateState: {}",
+                    partDir, splitDir, aggregateState);
+
+            // We have moved all the splits, so get rid of the empty parent
+            deleteEmptyDir(splitStaging, null);
+        }
+
+        // If we have an aggregate we can close now then do so.
+        final AggregateState aggregateState = aggregateStateMap.computeIfAbsent(feedKey, this::createAggregate);
+        if (aggregateState.isReadyToClose(aggregatorConfig)) {
+            closeAggregate(feedKey, aggregateState);
+        }
+    }
+
+    private void deleteEmptyDir(final Path dir, final Runnable onSuccessfulDelete) {
+        Objects.requireNonNull(dir);
+        try {
+            Files.delete(dir);
+            LOGGER.debug("Deleted empty dir {}", dir);
+            NullSafe.run(onSuccessfulDelete);
+        } catch (IOException e) {
+            LOGGER.error("Unable to delete empty dir {}", dir, e);
+        }
+    }
+
     /**
-     * Add a part to the current aggregate by moving it's source dir to the aggregate output dir and incrementing the
-     * item count and total bytes for the aggregate.
+     * Add a part to the current aggregate by moving its source dir to the aggregate
+     * output dir and incrementing the item count and total bytes for the aggregate.
+     * <p>
+     * MUST be called under the feedKeyLock.
+     * </p>
      *
      * @param feedKey The feed key of the aggregate to add to.
      * @param dir     The source dir to add.
@@ -259,21 +337,24 @@ public class PreAggregator {
                                               final Part part) throws IOException {
         final AggregateState aggregateState = aggregateStateMap
                 .computeIfAbsent(feedKey, this::createAggregate);
-        final long partNo = aggregateState.partCount + 1;
-        final Path destDir = aggregateState.aggregateDir.resolve(StringIdUtil.idToString(partNo));
-        Files.move(
-                dir,
-                destDir,
-                StandardCopyOption.ATOMIC_MOVE);
-        aggregateState.partCount = partNo;
-        aggregateState.itemCount += part.items;
-        aggregateState.totalBytes += part.bytes;
+        final long newPartCount = aggregateState.partCount + 1;
+        final Path destDir = aggregateState.aggregateDir.resolve(StringIdUtil.idToString(newPartCount));
+        Files.move(dir, destDir, StandardCopyOption.ATOMIC_MOVE);
+        aggregateState.addPart(part);
+        LOGGER.debug(() -> LogUtil.message("addPartToAggregate() - feedKey: {}, dir: {}, part: {}, " +
+                                           "destDir: {}, itemCount: {}, totalBytes: {}",
+                feedKey, dir, part, destDir, aggregateState.itemCount, aggregateState.totalBytes));
         return aggregateState;
     }
 
     /**
-     * Calculate the number of logical parts the source zip will need to be split into in order to fit output aggregates
-     * without them exceeding the size and item count constraints.
+     * Calculate the number of logical parts the source zip will need to be split into
+     * in order to fit output aggregates without them exceeding the size and item
+     * count constraints.
+     *
+     * <p>
+     * MUST be called under feedKeyLock.
+     * </p>
      *
      * @param feedKey   The feed
      * @param fileGroup the file group to examine.
@@ -293,6 +374,7 @@ public class PreAggregator {
         long currentAggregateBytes = aggregateState.totalBytes;
         long partItems = 0;
         long partBytes = 0;
+        final List<ZipEntryGroup> partEntries = new ArrayList<>();
         boolean firstEntry = true;
 
         try (final BufferedReader bufferedReader = Files.newBufferedReader(fileGroup.getEntries())) {
@@ -303,8 +385,8 @@ public class PreAggregator {
 
                 // If the current aggregate has items then we might want to close and start a new one.
                 if (currentAggregateItemCount > 0 &&
-                        (currentAggregateItemCount + 1 > maxItemsPerAggregate ||
-                                currentAggregateBytes + totalUncompressedSize > maxUncompressedByteSize)) {
+                    (currentAggregateItemCount + 1 > maxItemsPerAggregate ||
+                     currentAggregateBytes + totalUncompressedSize > maxUncompressedByteSize)) {
                     if (firstEntry) {
                         // If the first entry immediately causes the current aggregate to exceed the required bounds
                         // then close it and create a new one.
@@ -315,11 +397,10 @@ public class PreAggregator {
                         // Create a new aggregate.
                         aggregateState = aggregateStateMap
                                 .computeIfAbsent(feedKey, this::createAggregate);
-
                     } else {
-
-                        // Split.
-                        parts.add(new Part(partItems, partBytes));
+                        // Split. Copy the list as the source is about to be cleared
+                        final Part part = new Part(partItems, partBytes, List.copyOf(partEntries));
+                        parts.add(part);
                     }
 
                     // Reset.
@@ -327,6 +408,7 @@ public class PreAggregator {
                     currentAggregateBytes = 0;
                     partItems = 0;
                     partBytes = 0;
+                    partEntries.clear();
                 }
 
                 // Add to the aggregate.
@@ -334,15 +416,14 @@ public class PreAggregator {
                 currentAggregateBytes += totalUncompressedSize;
                 partItems++;
                 partBytes += totalUncompressedSize;
+                partEntries.add(zipEntryGroup);
 
                 line = bufferedReader.readLine();
                 firstEntry = false;
             }
-
             // Add final part.
-            parts.add(new Part(partItems, partBytes));
+            parts.add(new Part(partItems, partBytes, List.copyOf(partEntries)));
         }
-
         return parts;
     }
 
@@ -356,6 +437,7 @@ public class PreAggregator {
     private List<Part> calculateOverflowingParts(final FileGroup fileGroup) throws IOException {
         long partItems = 0;
         long partBytes = 0;
+        final List<ZipEntryGroup> partEntries = new ArrayList<>();
         try (final BufferedReader bufferedReader = Files.newBufferedReader(fileGroup.getEntries())) {
             String line = bufferedReader.readLine();
             while (line != null) {
@@ -363,21 +445,29 @@ public class PreAggregator {
                 final long totalUncompressedSize = zipEntryGroup.getTotalUncompressedSize();
                 partItems++;
                 partBytes += totalUncompressedSize;
+                partEntries.add(zipEntryGroup);
                 line = bufferedReader.readLine();
             }
         }
-        return Collections.singletonList(new Part(partItems, partBytes));
+        return Collections.singletonList(new Part(partItems, partBytes, List.copyOf(partEntries)));
     }
 
-    private synchronized void closeAggregate(final FeedKey feedKey,
-                                             final AggregateState aggregateState) {
-        LOGGER.debug(() -> "Closing aggregate: " + FileUtil.getCanonicalPath(aggregateState.aggregateDir));
-        destination.accept(aggregateState.aggregateDir);
-        aggregateStateMap.remove(feedKey);
-        LOGGER.debug(() -> "Closed aggregate: " + FileUtil.getCanonicalPath(aggregateState.aggregateDir));
+    private void closeAggregate(final FeedKey feedKey,
+                                final AggregateState aggregateState) {
+        LOGGER.debug("Closing aggregate: {}", aggregateState);
+        final Lock lock = feedKeyLock.get(feedKey);
+        lock.lock();
+        try {
+            destination.accept(aggregateState.aggregateDir);
+            aggregateStateMap.remove(feedKey);
+            LOGGER.debug("Closed aggregate: {}", aggregateState);
+        } finally {
+            lock.unlock();
+        }
     }
 
     private PartDirs split(final Path dir, final List<Part> parts) throws IOException {
+        LOGGER.debug(() -> LogUtil.message("split() - dir: {}, parts count: {}", dir, parts.size()));
         final String inputDirName = dir.getFileName().toString();
         final FileGroup fileGroup = new FileGroup(dir);
         // Get a buffer to help us transfer data.
@@ -396,6 +486,7 @@ public class PreAggregator {
             for (final Part part : parts) {
                 final String outputDirName = inputDirName + "_part_" + partNo++;
                 final Path outputDir = parentDir.resolve(outputDirName);
+                LOGGER.trace("Creating outputDir: {}", outputDir);
                 Files.createDirectory(outputDir);
                 partDirs.add(new PartDir(part, outputDir));
                 final FileGroup outputFileGroup = new FileGroup(outputDir);
@@ -426,8 +517,16 @@ public class PreAggregator {
                         }
                     }
                 }
-
-                // Copy the meta.
+                // Write the entries for this split part
+                final Path outputEntriesFile = outputFileGroup.getEntries();
+                try (final Writer entryWriter = Files.newBufferedWriter(outputEntriesFile)) {
+                    for (final ZipEntryGroup outputZipEntryGroup : part.zipEntryGroups) {
+                        outputZipEntryGroup.write(entryWriter);
+                    }
+                }
+                // Copy the meta from the split source
+                LOGGER.trace(() ->
+                        LogUtil.message("Copy {} => {}", fileGroup.getMeta(), outputFileGroup.getMeta()));
                 Files.copy(fileGroup.getMeta(), outputFileGroup.getMeta());
             }
         }
@@ -455,7 +554,7 @@ public class PreAggregator {
             Files.createDirectories(aggregateDir);
 
             LOGGER.debug(() -> "Created aggregate: " + FileUtil.getCanonicalPath(aggregateDir));
-            return new AggregateState(Instant.now(), aggregateDir);
+            return new AggregateState(aggregateDir);
 
         } catch (final IOException e) {
             LOGGER.error(e::getMessage, e);
@@ -463,21 +562,39 @@ public class PreAggregator {
         }
     }
 
+    /**
+     * Synchronised to stop closeOldAggregates being called concurrently (which
+     * shouldn't really happen with the frequency executor), but
+     * closeAggregate() will still happen under the striped lock to protect it
+     * from other threads working on aggregates
+     */
     private synchronized void closeOldAggregates() {
-        aggregateStateMap.forEach((k, v) -> {
-            final Instant createTime = v.createTime;
-            final Instant aggregateAfter = createTime.plus(aggregatorConfig.getAggregationFrequency().getDuration());
-            if (aggregateAfter.isBefore(Instant.now())) {
+        final AtomicInteger count = new AtomicInteger();
+        aggregateStateMap.forEach((feedKey, aggregateState) -> {
+            if (aggregateState.isAggregateTooOld(aggregatorConfig)) {
                 // Close the current aggregate.
-                closeAggregate(k, v);
+                count.incrementAndGet();
+                closeAggregate(feedKey, aggregateState);
             }
         });
+        if (LOGGER.isDebugEnabled()) {
+            if (count.get() > 0) {
+                LOGGER.debug("closeOldAggregates() - closed {} old aggregates", count);
+            }
+        }
     }
 
     public void setDestination(final Consumer<Path> destination) {
         this.destination = destination;
     }
 
+
+    // --------------------------------------------------------------------------------
+
+
+    /**
+     * NOT thread safe
+     */
     private static class AggregateState {
 
         final Instant createTime;
@@ -486,11 +603,69 @@ public class PreAggregator {
         long itemCount;
         long totalBytes;
 
-        public AggregateState(final Instant createTime, final Path aggregateDir) {
+        private AggregateState(final Path aggregateDir) {
+            this.createTime = Instant.now();
+            this.aggregateDir = aggregateDir;
+        }
+
+        private AggregateState(final Instant createTime, final Path aggregateDir) {
             this.createTime = createTime;
             this.aggregateDir = aggregateDir;
         }
+
+        private void addItem(final long uncompressedSize) {
+            itemCount++;
+            totalBytes += uncompressedSize;
+        }
+
+        private void addPart(final Part part) {
+            partCount++;
+            itemCount += part.items;
+            totalBytes += part.bytes;
+        }
+
+        private boolean isAggregateTooOld(final AggregatorConfig aggregatorConfig) {
+            final Instant aggregateAfter = createTime.plus(aggregatorConfig.getAggregationFrequency().getDuration());
+            final boolean isTooOld = aggregateAfter.isBefore(Instant.now());
+            LOGGER.trace("createTime {}, aggregateAfter: {}, isTooOld: {}", createTime, aggregateAfter, isTooOld);
+            return isTooOld;
+        }
+
+        private boolean isReadyToClose(final AggregatorConfig aggregatorConfig) {
+            final boolean isReadyToClose;
+            if (itemCount >= aggregatorConfig.getMaxItemsPerAggregate()) {
+                LOGGER.trace(() -> LogUtil.message("Item count {} reached/passed limit {}, aggregateDir: {}",
+                        itemCount, aggregatorConfig.getMaxItemsPerAggregate(), aggregateDir));
+                isReadyToClose = true;
+            } else if (totalBytes >= aggregatorConfig.getMaxUncompressedByteSize()) {
+                LOGGER.trace(() -> LogUtil.message("Aggregate size {} reached/passed limit {}, aggregateDir: {}",
+                        itemCount, aggregatorConfig.getMaxItemsPerAggregate(), aggregateDir));
+                isReadyToClose = true;
+            } else if (isAggregateTooOld(aggregatorConfig)) {
+                isReadyToClose = true;
+            } else {
+                LOGGER.trace("Not ready to close, itemCount: {}, totalBytes: {}, createTime: {}, aggregateDir: {}",
+                        itemCount, totalBytes, createTime, aggregateDir);
+                isReadyToClose = false;
+            }
+            return isReadyToClose;
+        }
+
+        @Override
+        public String toString() {
+            return "AggregateState{" +
+                   "createTime=" + createTime +
+                   ", aggregateDir=" + aggregateDir +
+                   ", partCount=" + partCount +
+                   ", itemCount=" + itemCount +
+                   ", totalBytes=" + totalBytes +
+                   '}';
+        }
     }
+
+
+    // --------------------------------------------------------------------------------
+
 
     /**
      * Record of a part items and total byte size.
@@ -498,9 +673,20 @@ public class PreAggregator {
      * @param items The number of items.
      * @param bytes The total byte size of the part.
      */
-    private record Part(long items, long bytes) {
+    private record Part(long items, long bytes, List<ZipEntryGroup> zipEntryGroups) {
 
+        private static final Part EMPTY = new Part(0, 0, Collections.emptyList());
+
+//        private Part addItem(final long bytes) {
+//            return new Part(
+//                    this.items + 1,
+//                    this.bytes + bytes);
+//        }
     }
+
+
+    // --------------------------------------------------------------------------------
+
 
     /**
      * Associate a dir with a part.
@@ -512,6 +698,10 @@ public class PreAggregator {
 
     }
 
+
+    // --------------------------------------------------------------------------------
+
+
     /**
      * Output of a split operation.
      *
@@ -522,3 +712,4 @@ public class PreAggregator {
 
     }
 }
+
